[EDIT] Re-built release versions
Some file where missing for the release versions, it should work fine by now

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="Windows Desktop"
+name="Windows10"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/abeaudoin/Documents/Dev Room/Godot/Dodge The Creeps/build/Dodge The Creeps.exe"
+export_path="/home/abeaudoin/Documents/Dev Room/Godot/Dodge-The-Creeps/build-w10/Dodge The Creeps.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -40,7 +40,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/abeaudoin/Documents/Dev Room/Godot/Dodge The Creeps/build/Dodge The Creeps.x86_64"
+export_path="/home/abeaudoin/Documents/Dev Room/Godot/Dodge-The-Creeps/build-linux/Dodge The Creeps.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -65,7 +65,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/abeaudoin/Documents/Dev Room/Godot/Dodge The Creeps/build/Dodge The Creeps.zip"
+export_path="/home/abeaudoin/Documents/Dev Room/Godot/Dodge-The-Creeps/build-macos/.zip"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
